<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/no_bluetooth_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_disabled"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_margin="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_bluetooth"
            android:id="@+id/enable_bluetooth_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_paired_device"
        android:id="@+id/no_paired_device_label"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_car_form_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/select_car_form_layout"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_device_instructions"
                android:id="@+id/select_instruction_label"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:id="@+id/select_car_spinner"
                android:layout_below="@+id/select_instruction_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_device"
                android:id="@+id/select_device_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/select_car_spinner"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/configure_car_form_layout"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_car_instructions"
                android:id="@+id/configure_car_instruction_label"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:id="@+id/name_label"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/configure_car_instruction_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_edit"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/name_label"
                android:layout_alignBaseline="@+id/name_label"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_car"
                android:id="@+id/configure_car_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/name_label"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>